[package]
name = "smapview"
version = "0.2.0"
authors = ["lilydjwg <lilydjwg@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
keywords = ["swap", "memory", "linux"]
description = "A simple program to view processes' different kinds of memory usage on Linux."
homepage = "https://github.com/lilydjwg/smapview"
repository = "https://github.com/lilydjwg/smapview"
readme = "README.md"

[dependencies]
clap = { version = "4.5.46", default-features = false, features = ["std", "derive", "help", "usage"] }
rayon = "1.11.0"

[profile.release]
lto = true
